Add shade profile build instructions to README
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>